k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testapp15
  namespace: testapp15

spec:
  selector:
    app: testapp15

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
