k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: testapp15
  namespace: testapp15

  annotations:
    alb.ingress.kubernetes.io/group.name: rajplatform
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb

  rules:
  - host: testapp15.rajplatform.online

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: testapp15

            port:
              number: 80
